force-app/main/default/objects/TimeTrade_SF1__Debug_Log__c/TimeTrade_SF1__Debug_Log__c.object-meta.xml
<CustomObject>
    <description>Custom object where all the errors will be stored.</description>
    <label>TimeTrade Debug Log</label>
    <nameField>
        <displayFormat>LOG-{00000}</displayFormat>
        <label>Debug Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TimeTrade Debug Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>