force-app/main/default/objects/TimeTrade_SF1__Debug_Log__c/fields/TimeTrade_SF1__Error_Description__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Error_Description__c</fullName>
    <description>Description related to the error.</description>
    <label>Error Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>