force-app/main/default/objects/TimeTrade_SF1__Debug_Log__c/fields/TimeTrade_SF1__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Error_Message__c</fullName>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>