force-app/main/default/objects/TimeTrade_SF1__Debug_Log__c/fields/TimeTrade_SF1__Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Exception_Type__c</fullName>
    <description>Type of the Exception thrown.</description>
    <label>Exception Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>