force-app/main/default/objects/TimeTrade_SF1__Debug_Log__c/fields/TimeTrade_SF1__Line_Number__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Line_Number__c</fullName>
    <description>Line number of the error.</description>
    <label>Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>