force-app/main/default/objects/TimeTrade_SF1__Debug_Log__c/fields/TimeTrade_SF1__Record_Detail__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Record_Detail__c</fullName>
    <description>Details regarding the record which caused the error.</description>
    <label>Record Detail</label>
    <type>TextArea</type>
</CustomField>