force-app/main/default/objects/TimeTrade_SF1__Debug_Log__c/listViews/TimeTrade_SF1__All.listView-meta.xml
<ListView>
    <fullName>TimeTrade_SF1__All</fullName>
    <columns>NAME</columns>
    <columns>TimeTrade_SF1__Error_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>